BugFix => Add Section Container Padding On Mobile.

--- a/src/app/components/add/add.component.scss
+++ b/src/app/components/add/add.component.scss
@@ -42,7 +42,6 @@ $links-gap: 25px;
 
     .container {
       width: 100% !important;
-      height: 60% !important;
 
       .links {
         flex-direction: column !important;
